[project]
name = "TempCatcher"
version = "0.0.1"
authors = [
  { name="TempCatcher", email="contact@tempcatcher.com" },
]
description = "Identify temporary email addresses using TempCatcher"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TempCatcher/tempcatcher"
Issues = "https://github.com/TempCatcher/tempcatcher/issues"

[build-system]
requires = [
    "setuptools >= 77.0.3",
    "dnspython >= 2.7.0",
    "requests >= 2.32.5"
]
build-backend = "setuptools.build_meta"
